# TeacherAIAgent

./: .gitignore  README.md  UPGRADE_NOTES.md  claude_session  main.py  pyproject.toml  requirements.txt  test_scene_director.py  test_storyboard.py  test_visual_intelligence.py
.claude/: settings.local.json
API/: api.py
Agents/: AssetFetcher_Agent.py  Clarification_Agent.py  ContextMemory_Agent.py  Discovery_Agent.py  Engagement_Agent.py  LayoutEngine_Agent.py  Logger_Agent.py  SceneDirector_Agent.py  SceneplannerAgent.py  Simplification_Agent.py  StoryboardComposer_Agent.py  Teaching_Agent.py  TranscriptGenerator_Agent.py  VideoGenerationAgent.py  VisualIntelligenceLayer_Agent.py  VoiceProcessing_Agent.py
Dashboard/: dashboard.html
Dashboard/nextjs/: package.json
Dashboard/nextjs/pages/: index.js
Docs/: Agents_Deep_Dive.md  Checklist.md  Complete_App_Guide.md  POC.md
